# Dawn

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  docker-compose.yml  package.json  vite.config.ts
.github/workflows/: agent-release.yml  ci.yml
apps/agent/: .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
apps/agent/examples/: mock_backend.rs  onchain_probe.rs  print_digest.rs
apps/agent/examples/workloads/: sum.wat
apps/agent/src/: config.rs  fetch.rs  idle.rs  jobpkg.rs  keystore.rs  lib.rs  main.rs  onchain.rs  outbox.rs  payout.rs  probes.rs  proof.rs  protocol.rs  runner.rs  transport.rs  wallet.rs  watchsource.rs  watchtower.rs
apps/agent/tests/: sandbox_job.rs  ws_roundtrip.rs
contracts/: .gitignore  DEPLOY.md  README.md  coverage-gate.sh  foundry.toml
contracts/script/: Deploy.s.sol  EscrowJob.s.sol  LocalE2E.s.sol  PrintDigest.s.sol  PrintM9Ref.s.sol  RedundantE2EClaim.s.sol  RedundantE2EDeploy.s.sol  RedundantE2ESubmit.s.sol  SmokeSettle.s.sol
contracts/src/: OperatorStaking.sol  Settlement.sol
contracts/src/interfaces/: IERC20.sol  IOperatorStaking.sol  ISettlement.sol
contracts/test/: M9TestBase.sol  OperatorStaking.t.sol  PoCSybilSlash.t.sol  Redundant.t.sol  RedundantInvariants.t.sol  Settlement.t.sol  SettlementInvariants.t.sol
contracts/test/mocks/: MockUSDC.sol
deploy/: README.md
deploy/fly/: api.toml  deploy-all.sh  indexer.toml  job-queue.toml  pricing.toml  proof-service.toml  secrets.example.sh
scripts/: e2e_local.sh  e2e_redundant.sh
services/: DEPLOY.md  README.md
services/api/: Dockerfile  README.md  package.json
services/api/src/: app.ts  jobid.ts  server.ts  x402.ts
services/api/src/repo/: jobs.ts  postgres.ts
services/api/test/: app.test.ts  x402.test.ts
services/indexer/: Dockerfile  README.md  package.json
services/indexer/src/: events.ts  indexer.ts  pgstate.ts  processor.ts  rpcsource.ts  rpcstakesource.ts  server.ts  source.ts  stake.ts  state.ts
services/indexer/test/: pgstate.test.ts  processor.test.ts  rpcsource.test.ts  stake.test.ts
services/job-queue/: Dockerfile  README.md  go.mod  go.sum
services/job-queue/cmd/job-queue/: main.go
services/job-queue/cmd/migrate/: main.go
services/job-queue/cmd/sign-assignment/: main.go
services/job-queue/internal/coordinator/: adapters.go  coordinator.go  coordinator_redundant_test.go  coordinator_test.go  eip191auth.go  eip191auth_test.go  proofhttp.go  proofhttp_test.go
services/job-queue/migrations/: 0001_init.sql  0002_result.sql  0003_proofs.sql  0004_indexer.sql  0005_x402_payments.sql  0006_redundant_committee.sql  0007_operator_stakes.sql
services/pricing/: Dockerfile  README.md  package.json  tsconfig.json
services/pricing/src/: app.ts  marketsource.ts  pricing.ts  reliability.ts  server.ts
services/pricing/test/: marketsource.test.ts  pricing.test.ts
services/proof-service/: Dockerfile  README.md  package.json  tsconfig.json
services/proof-service/src/: adapters.ts  app.ts  config.ts  consensus.ts  onchain.ts  server.ts  service.ts  store.ts
services/proof-service/test/: consensus.test.ts  onchain.test.ts  service.test.ts  store.test.ts
src/: routeTree.gen.ts  styles.css
src/components/axion/: About.tsx  CTA.tsx  CaseStudies.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Marquee.tsx  SiteNav.tsx  ValueProps.tsx
src/lib/: scroll.ts  webgl-shader-name-fix.ts
src/routes/: __root.tsx  download.tsx  index.tsx  support.tsx
(+24 files in other folders)
